@@ -3,41 +3,37 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.endeleya</groupId>
     <artifactId>Kazisafex</artifactId>
-    <version>1.2.2-ZR</version>
+    <version>2.0.25-build6</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>22</maven.compiler.source>
         <maven.compiler.target>22</maven.compiler.target>
         <maven.compiler.release>22</maven.compiler.release>
+        <javafx.version>24.0.1</javafx.version>
         <hikaricp.version>5.1.0</hikaricp.version>
     </properties>
-    
-    <!--    <repositories>
-        other repositories if any
-        <repository>
-            <id>project.local</id>
-            <name>project</name>
-            <url>file:${project.basedir}/repo</url>
-        </repository>
-    </repositories>-->
-
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>19-ea+11</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
-            <version>20-ea+4</version>
+            <version>${javafx.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>21.0.2</version>
-        </dependency>        
+            <version>${javafx.version}</version>
+        </dependency> 
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>   
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>converter-jackson</artifactId>
@@ -50,48 +46,69 @@
             <type>jar</type>
         </dependency>
         <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>5.0.0-alpha.14</version>
+            <type>jar</type>
+        </dependency>
+
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.17.1</version>
+            <version>2.19.0</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.17.1</version>
+            <version>2.19.0</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.17.1</version>
+            <version>2.19.0</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>6.5.0.Final</version>
+            <version>6.6.15.Final</version>
             <type>jar</type>
         </dependency>
-        <dependency>
+                <dependency>
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>6.0.0.Alpha7</version>
-            <!--<type>jar</type>-->
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>eclipselink</artifactId>
-            <version>4.0.2</version>
             <type>jar</type>
         </dependency>
+<!--        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.6.15.Final</version>
+        </dependency>-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>8.4.0</version>
             <type>jar</type>
         </dependency>
-      
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.50.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.25.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.tyrus.bundles</groupId>
+            <artifactId>tyrus-standalone-client</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
@@ -101,7 +118,7 @@
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
-            <version>3.0.1</version>
+            <version>3.0.5</version>
             <type>jar</type>
         </dependency>
         <dependency>
@@ -174,48 +191,49 @@
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>pdfa</artifactId>
-            <version>7.1.16</version>
+            <version>9.1.0</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>styled-xml-parser</artifactId>
-            <version>7.1.16</version>
+            <version>9.1.0</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>barcodes</artifactId>
-            <version>7.1.16</version>
+            <version>9.1.0</version>
             <type>jar</type>
         </dependency>
-      
+        <dependency>
+            <groupId>com.fazecast</groupId>
+            <artifactId>jSerialComm</artifactId>
+            <version>2.11.0</version>
+            <type>jar</type>
+        </dependency>
         <dependency>
             <groupId>jakarta.json</groupId>
             <artifactId>jakarta.json-api</artifactId>
             <version>2.1.3</version>
             <type>jar</type>
         </dependency>
+        
+       
+       
         <dependency>
             <groupId>pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
             <version>0.7.3</version>
             <type>jar</type>
         </dependency>
-       
-       
         <dependency>
             <groupId>avalon-framework</groupId>
             <artifactId>avalon-framework-api</artifactId>
             <version>4.3</version>
             <type>jar</type>
         </dependency>
-        <dependency>
-            <groupId>org.glassfish.tyrus.bundles</groupId>
-            <artifactId>tyrus-standalone-client</artifactId>
-            <version>2.2.0-M1</version>
-            <type>jar</type>
-        </dependency>
+      
         <dependency>
             <groupId>org.eclipse.parsson</groupId>
             <artifactId>parsson</artifactId>
@@ -270,63 +288,12 @@
             <version>5.0.1</version>
             <type>jar</type>
         </dependency>
-        
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-hibernate5</artifactId>
-            <version>2.12.3</version> <!-- Assurez-vous de vérifier la version compatible -->
-        </dependency>
-      
-        <!--        <dependency>
-    <groupId>org.glassfish.tyrus</groupId>
-    <artifactId>tyrus-core</artifactId>
-    <version>2.2.0-M1</version>
-    <type>jar</type>
-</dependency>
-        <dependency>
-            <groupId>org.glassfish.tyrus</groupId>
-            <artifactId>tyrus-client</artifactId>
-            <version>2.2.0-M1</version>
-            <type>jar</type>
-        </dependency>-->
-        <!--        <dependency>
-            <groupId>org.glassfish.tyrus</groupId>
-            <artifactId>tyrus-container-grizzly</artifactId>
-            <version>1.1</version>
-            <type>jar</type>
-        </dependency>-->
-       
-        <!--        <dependency>
-            <groupId>org.glassfish</groupId>
-            <artifactId>javax.json</artifactId>
-            <version>1.0.1</version>
-            <type>jar</type>
-        </dependency>-->
-        <!--        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>org.eclipse.persistence.core</artifactId>
-            <version>2.7.12</version>
-            <type>jar</type>
-        </dependency>-->
-        <!--        <dependency>
-            <groupId>org.glassfish.embedded</groupId>
-            <artifactId>glassfish-embedded-jpa</artifactId>
-            <version>3.0-Prelude-Embedded-m2</version>
-            <type>jar</type>
-        </dependency>-->
-        <dependency>
-            <groupId>jakarta.json.bind</groupId>
-            <artifactId>jakarta.json.bind-api</artifactId>
-            <version>3.0.0</version>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.19.0</version>
             <type>jar</type>
         </dependency>
-       
-        <!--        <dependency>
-            <groupId>jakarta.platform</groupId>
-            <artifactId>jakarta.jakartaee-core-api</artifactId>
-            <version>10.0.0</version>
-            <type>jar</type>
-        </dependency>-->
         <dependency>
             <groupId>raven.toast</groupId>
             <artifactId>swing-toast-notifications</artifactId>
@@ -349,16 +316,17 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-media</artifactId>
-            <version>20-ea+4</version>
+            <version>${javafx.version}</version>
             <type>jar</type>
         </dependency>
+        
+               
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
             <version>8.40.11</version>
             <type>jar</type>
         </dependency>
-               
         <dependency>
             <groupId>com.github.anastaciocintra</groupId>
             <artifactId>escpos-coffee</artifactId>
@@ -368,19 +336,19 @@
         <dependency>
             <groupId>com.google.zxing</groupId>
             <artifactId>core</artifactId>
-            <version>3.5.0</version>
+            <version>3.5.3</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.google.zxing</groupId>
             <artifactId>javase</artifactId>
-            <version>3.5.0</version>
+            <version>3.5.3</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
+            <version>3.17.0</version>
             <type>jar</type>
         </dependency>
         
@@ -390,59 +358,17 @@
             <version>2.3.1</version>
             <type>jar</type>
         </dependency>
-        <!--        <dependency>
-            <groupId>net.glxn</groupId>
-            <artifactId>qrgen</artifactId>
-            <version>1.4</version>
-            <type>jar</type>
-        </dependency>-->
-        <!--        <dependency>
-                    <groupId>com.neovisionaries</groupId>
-                    <artifactId>nv-bluetooth</artifactId>
-                    <version>1.8</version>
-                    <type>jar</type>
-                </dependency>
-        -->        
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>5.0.0-alpha.14</version>
-            <type>jar</type>
-        </dependency>
-        <!--        <dependency>
-            <groupId>net.glxn</groupId>
-            <artifactId>qrgen</artifactId>
-            <version>1.4</version>
-            <type>jar</type>
-        </dependency>-->
-        <!--        <dependency>
-            <groupId>com.guicedee..services</groupId>
-            <artifactId>primefaces</artifactId>
-            <version>1.2.2.1-jre17</version>
-            <type>jar</type>
-        </dependency>-->
-        <!--        <dependency>
-            <groupId>jakarta.platform</groupId>
-            <artifactId>jakarta.jakartaee-api</artifactId>
-            <version>10.0.0</version>
-        </dependency>-->
-        <dependency>
-            <groupId>org.eclipse</groupId>
-            <artifactId>yasson</artifactId>
-            <version>3.0.3</version>
-            <type>jar</type>
-        </dependency>
         <dependency>
             <groupId>jakarta.websocket</groupId>
             <artifactId>jakarta.websocket-client-api</artifactId>
-            <version>2.1.0</version>
+            <version>2.2.0</version>
             <!--<scope>provided</scope>-->
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>jakarta.websocket</groupId>
             <artifactId>jakarta.websocket-api</artifactId>
-            <version>2.1.0</version>
+            <version>2.2.0</version>
             <!--<scope>provided</scope>-->
             <type>jar</type>
         </dependency>
@@ -459,14 +385,70 @@
             <version>5.6.15.Final</version>
             <type>jar</type>
         </dependency>
-        <!--        <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>javax.persistence-api</artifactId>
-            <version>2.2</version>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.1.0</version>
             <type>jar</type>
-        </dependency>-->
-        
-      
+        </dependency>
+        <dependency>
+            <groupId>com.launchdarkly</groupId>
+            <artifactId>okhttp-eventsource</artifactId>
+            <version>3.0.0</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okio</groupId>
+            <artifactId>okio-jvm</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.0</version>
+            <type>jar</type>
+        </dependency>
+        <!-- Testing Dependencies -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.10.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.11.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.11.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.bluecove</groupId>
+            <artifactId>bluecove</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.bluecove</groupId>
+            <artifactId>bluecove-gpl</artifactId>
+            <version>2.1.0</version>
+        </dependency>
     </dependencies>   
     <build>
         <resources>
@@ -528,20 +510,16 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.4.2</version>
                 <configuration>
-                    <descriptors>
-                        <descriptor>src/main/assembly/assembly.xml</descriptor>
-                    </descriptors>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.endeleya.kazisafex.Kazisafex</mainClass>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>com.endeleya.kazisafex.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
+
                 <executions>
                     <execution>
                         <id>make-assembly</id>
@@ -580,14 +558,17 @@
                         <path>
                             <groupId>jakarta.persistence</groupId>
                             <artifactId>jakarta.persistence-api</artifactId>
-                            <version>3.0.0</version> 
+                            <version>3.2.0</version> 
                         </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
+                        <arg>--add-reads</arg>
+                        <arg>com.endeleya.kazisafex=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
+           
         </plugins>
         
     </build>
